--- a/mystyle.css
+++ b/mystyle.css
@@ -1,13 +1,13 @@
 #shark{
     left:100px; top:400px;
     position: absolute;
-    animation-name: shark;
+    animation-name: Shark;
     animation-duration: 10s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-play-state: running;
 }
-@keyframes shark {
+@keyframes Shark {
     0% {left:100px; top:400px;}
     20% {left:300px; top:400px;}
     40% {left:500px; top: 300px;}
@@ -15,5 +15,5 @@
     60% { left: 600px; top: 100px;}
     80% { left:500px; top: 200px;}
 100% {left:100px; top:400px;transition:scaleX(-1);}
-    
+
 }
